--- a/environment.yml
+++ b/environment.yml
@@ -1,40 +1,48 @@
 name: carnd-term1
 channels:
-- conda-forge
 - menpo
+- conda-forge
+- anaconda-fusion
 - defaults
 dependencies:
 - appnope=0.1.0=py35_0
 - blas=1.1=openblas
 - bleach=1.5.0=py35_0
-- ca-certificates=2017.1.23=0
-- certifi=2017.1.23=py35_0
-- cffi=1.7.0=py35_0
+- bokeh=0.12.5=py35_0
+- boto3=1.4.4=py35_0
+- botocore=1.5.39=py35_0
+- ca-certificates=2017.1.23=1
+- certifi=2017.4.17=py35_0
+- cffi=1.10.0=py35_0
 - click=6.7=py35_0
 - cloudpickle=0.2.2=py35_2
 - cycler=0.10.0=py35_0
-- dask=0.13.0=py35_0
+- dask=0.14.1=py35_0
 - decorator=4.0.11=py35_0
+- distributed=1.16.1=py35_0
+- docutils=0.13.1=py35_0
 - entrypoints=0.2.2=py35_1
-- eventlet=0.20.1=py35_0
+- eventlet=0.21.0=py35_0
 - flask=0.12=py35_0
-- flask-socketio=2.7.1=py35_0
+- flask-socketio=2.8.5=py35_0
 - freetype=2.7=1
-- h5py=2.6.0=np112py35_7
+- h5py=2.7.0=np112py35_0
 - hdf5=1.8.17=9
+- heapdict=1.0.0=py35_0
 - html5lib=0.999=py35_0
-- icu=58.1=1
 - idna=2.1=py35_0
 - imageio=2.1.2=py35_0
-- ipykernel=4.5.2=py35_0
-- ipython=5.3.0=py35_0
+- ipykernel=4.6.1=py35_0
+- ipython=6.0.0=py35_0
 - ipython_genutils=0.2.0=py35_0
 - itsdangerous=0.24=py35_1
+- jedi=0.10.0=py35_0
 - jinja2=2.9.5=py35_0
+- jmespath=0.9.2=py35_0
 - jpeg=9b=0
 - jsonschema=2.5.1=py35_0
 - jupyter=1.0.0=py35_0
-- jupyter_client=5.0.0=py35_0
+- jupyter_client=5.0.1=py35_0
 - jupyter_console=5.1.0=py35_0
 - jupyter_core=4.3.0=py35_0
 - libffi=3.2.1=3
@@ -44,17 +52,18 @@ dependencies:
 - libtiff=4.0.6=7
 - locket=0.2.0=py35_1
 - markupsafe=0.23=py35_1
-- matplotlib=2.0.0=np112py35_2
-- mistune=0.7.3=py35_1
-- nbconvert=5.1.1=py35_0
-- nbformat=4.2.0=py35_0
+- matplotlib=2.0.0=np112py35_3
+- mistune=0.7.4=py35_0
+- msgpack-python=0.4.8=py35_0
+- nbconvert=5.1.1=py35_1
+- nbformat=4.3.0=py35_0
 - ncurses=5.9=10
 - networkx=1.11=py35_0
-- notebook=4.4.1=py35_0
+- notebook=5.0.0=py35_0
 - numpy=1.12.1=py35_blas_openblas_200
 - olefile=0.44=py35_0
-- openblas=0.2.19=1
-- openssl=1.0.2h=3
+- openblas=0.2.19=2
+- openssl=1.0.2k=0
 - pandas=0.19.2=np112py35_1
 - pandoc=1.19.2=0
 - pandocfilters=1.4.1=py35_0
@@ -62,9 +71,10 @@ dependencies:
 - patsy=0.4.1=py35_0
 - pexpect=4.2.1=py35_0
 - pickleshare=0.7.3=py35_0
-- pillow=4.0.0=py35_2
+- pillow=4.1.0=py35_0
 - pip=9.0.1=py35_0
-- prompt_toolkit=1.0.13=py35_0
+- prompt_toolkit=1.0.14=py35_0
+- psutil=5.2.1=py35_0
 - ptyprocess=0.5.1=py35_0
 - pyasn1=0.2.3=py35_0
 - pycparser=2.17=py35_0
@@ -74,30 +84,34 @@ dependencies:
 - pyqt=4.11.4=py35_2
 - python=3.5.2=5
 - python-dateutil=2.6.0=py35_0
-- python-engineio=1.3.0=py35_0
-- python-socketio=1.7.2=py35_0
-- pytz=2016.10=py35_0
-- pyyaml=3.12=py35_0
+- python-engineio=1.3.2=py35_0
+- python-socketio=1.7.4=py35_0
+- pytz=2017.2=py35_0
+- pywavelets=0.5.2=np112py35_0
+- pyyaml=3.12=py35_1
 - pyzmq=16.0.2=py35_1
-- qt=4.8.7=7
-- qtconsole=4.2.1=py35_1
+- qtconsole=4.3.0=py35_0
 - readline=6.2=0
 - requests=2.13.0=py35_0
-- scikit-image=0.12.3=np112py35_1
-- scikit-learn=0.18=np112py35_blas_openblas_204
+- s3fs=0.0.9=py35_0
+- s3transfer=0.1.10=py35_1
+- scikit-image=0.13.0=np112py35_0
+- scikit-learn=0.18.1=np112py35_blas_openblas_200
 - scipy=0.19.0=np112py35_blas_openblas_200
 - seaborn=0.7.1=py35_0
 - setuptools=33.1.1=py35_0
 - simplegeneric=0.8.1=py35_0
 - sip=4.18=py35_1
 - six=1.10.0=py35_1
+- sortedcontainers=1.5.3=py35_0
 - sqlite=3.13.0=1
 - statsmodels=0.8.0=np112py35_0
+- tblib=1.3.2=py35_0
 - terminado=0.6=py35_0
 - testpath=0.3=py35_0
 - tk=8.5.19=1
 - toolz=0.8.2=py35_0
-- tornado=4.4.2=py35_0
+- tornado=4.5.1=py35_0
 - traitlets=4.3.2=py35_0
 - wcwidth=0.1.7=py35_0
 - webencodings=0.5=py35_0
@@ -106,31 +120,26 @@ dependencies:
 - xz=5.2.2=0
 - yaml=0.1.6=0
 - zeromq=4.2.1=1
+- zict=0.1.1=py35_0
 - zlib=1.2.11=0
-- bokeh=0.12.4=py35_0
 - cryptography=1.7.1=py35_0
 - greenlet=0.4.12=py35_0
+- qt=4.8.7=4
 - ffmpeg=2.8.6=0
 - ipywidgets=5.1.5=py35_0
 - opencv3=3.1.0=py35_0
 - tbb=4.3_20141023=0
 - widgetsnbextension=1.2.3=py35_1
 - pip:
-  - cairocffi==0.8.0
-  - cairosvg==2.0.2
-  - cssselect==1.0.1
   - graphviz==0.6
   - ipython-genutils==0.2.0
-  - jupyter-client==5.0.0
+  - jupyter-client==5.0.1
   - jupyter-console==5.1.0
   - jupyter-core==4.3.0
   - keras==1.2.1
-  - lxml==3.7.3
-  - moviepy==0.2.2.13
-  - prompt-toolkit==1.0.13
+  - moviepy==0.2.3.2
+  - prompt-toolkit==1.0.14
   - protobuf==3.2.0
   - tensorflow==0.12.1
-  - theano==0.8.2
-  - tinycss==0.4
+  - theano==0.9.0
   - tqdm==4.11.2
-
